tests/error/type_errors/call_missing_arg.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: int) -> int:
    return foo()
