tests/error/type_errors/call_missing_arg.err
Error: Not enough arguments (at $FILE:6:14)
  | 
4 | @compile_guppy
5 | def foo(x: int) -> int:
6 |     return foo()
  |               ^^ Missing argument (expected 1, got 0)

Note: Function signature is `int -> int`

Guppy compilation failed due to 1 previous error
